v2.5.5/_sources/plugins/node_group_node_delete_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.ise.node_group_node_delete_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.node_group_node_delete module -- Resource module for Node Group Node Delete
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 2.5.5).

    To install it, use: :code:`ansible-galaxy collection install cisco.ise`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.ise.node_group_node_delete_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.ise.node_group_node_delete`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.ise 2.1.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation create of the resource Node Group Node Delete.
- Purpose of this API is to remove a node from a node group in the cluster.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.ise.node_group_node_delete_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk \>= 2.0.3
- python \>= 3.5






.. Options

Parameters
----------


.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-hostname"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-hostname:

      .. rst-class:: ansible-option-title

      **hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Node Group Node Delete's hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_debug"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-ise_debug:

      .. rst-class:: ansible-option-title

      **ise_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_hostname"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-ise_hostname:

      .. rst-class:: ansible-option-title

      **ise_hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_password"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-ise_password:

      .. rst-class:: ansible-option-title

      **ise_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_username"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-ise_username:

      .. rst-class:: ansible-option-title

      **ise_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine username to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_api_gateway"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-ise_uses_api_gateway:

      .. rst-class:: ansible-option-title

      **ise_uses_api_gateway**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_api_gateway" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in cisco.ise 1.1.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether to use the Identity Services Engine's API Gateway to send requests.

      If it is true, it uses the ISE's API Gateway and sends requests to https://{{ise\_hostname}}.

      If it is false, it sends the requests to https://{{ise\_hostname}}:{{port}}, where the port value depends on the Service used (ERS, Mnt, UI, PxGrid).


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_csrf_token"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-ise_uses_csrf_token:

      .. rst-class:: ansible-option-title

      **ise_uses_csrf_token**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_csrf_token" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in cisco.ise 3.0.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether we send the CSRF token to ISE's ERS APIs.

      If it is True, the SDK assumes that your ISE CSRF Check is enabled.

      If it is True, it assumes you need the SDK to manage the CSRF token automatically for you.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_verify"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-ise_verify:

      .. rst-class:: ansible-option-title

      **ise_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_version"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-ise_version:

      .. rst-class:: ansible-option-title

      **ise_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Identity Services Engine to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1\_Patch\_1"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_wait_on_rate_limit"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-ise_wait_on_rate_limit:

      .. rst-class:: ansible-option-title

      **ise_wait_on_rate_limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_wait_on_rate_limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable automatic rate-limit handling.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-nodeGroupName"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__parameter-nodegroupname:

      .. rst-class:: ansible-option-title

      **nodeGroupName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-nodeGroupName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      NodeGroupName path parameter. Name of the existing node group.


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are node\_group.NodeGroup.remove\_node,
   - Paths used are post /api/v1/deployment/node-group/{nodeGroupName}/remove-node,
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco ISE SDK
   - The parameters starting with ise\_ are used by the Cisco ISE Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Cisco ISE documentation for Node Group <https://developer.cisco.com/docs/identity-services-engine/v1/#!deployment-openapi>`_
       Complete reference of the Node Group API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Create
      cisco.ise.node_group_node_delete:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        hostname: string
        nodeGroupName: string





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_response"></div>

      .. _ansible_collections.cisco.ise.node_group_node_delete_module__return-ise_response:

      .. rst-class:: ansible-option-title

      **ise_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"success": {"message": "string"}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/CiscoISE/ansible-ise/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/CiscoISE/ansible-ise" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

